--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link href='//fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800' rel='stylesheet' type='text/css'>
 		<link href='//fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700italic,700,900,900italic' rel='stylesheet' type='text/css'>
 		<link rel="shortcut icon" href="favicon.ico">
-    <title>Premier School Casino</title>
+    <title>Premier Academy Casino</title>
   </head>
   <body>
     <noscript>
